# subxt-examples

./: Cargo.toml  LICENSE
example-contract/: Cargo.toml
example-contract/src/: main.rs
example-read-contract/: Cargo.toml
example-read-contract/src/: logger.rs  main.rs
example-transfer/: Cargo.toml
example-transfer/src/: main.rs
resources/: goro.metadata  goro_flipper_demo.contract  goro_flipper_demo.json  goro_flipper_demo.wasm
